--- a/Exc.Class.1.ipynb
+++ b/Exc.Class.1.ipynb
@@ -2,30 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bceeaeba",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as np"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "9eea0ef4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Problem 1 ##"
+    "## Problem 1 ##\n",
+    "a = np.random.normal(0.1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "d352b723",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d8393a4",
    "metadata": {},
    "outputs": [],
    "source": []
