--- a/Exc.Class.1.ipynb
+++ b/Exc.Class.1.ipynb
@@ -14,8 +14,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d352b723",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = []\n",
+    "for i in range(10):\n",
+    "    test_list.append(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a3ef796",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -23,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a3ef796",
+   "id": "7fffa12a",
    "metadata": {},
    "outputs": [],
    "source": []
