--- a/Exc.Class.1.ipynb
+++ b/Exc.Class.1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "bceeaeba",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "d352b723",
    "metadata": {},
    "outputs": [],
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9a3ef796",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np_list = np.array(list)"
+   ]
   },
   {
    "cell_type": "code",
